--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,58 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #EEEEEE;
+  --foreground: #222831;
+  --text: #393E46;
+  --mint-blue: #00ADB5;
+  --pale-yellow: #FFF9E3;
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+body{
+  background-image: linear-gradient( 180deg, #eeeeee 0%, #22283150 50%), url("/hero-bg.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  min-height: 100vh ;
+}
+
+.background{
+  background-color: #22283111;
+  backdrop-filter: blur(8px);
+  height: 100vh;
+}
+
+.container{
+  max-width: 1280px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+.heading{
+  font-family: "Jersey 10", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 64px;
+}
+
+.card{
+  background-image: url("/card-bg.jpg");
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+}
+
+
+@media screen and (min-width: 768px){
+  .container{
+    padding-left: 80px;
+    padding-right: 80px;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
